--- a/final_exploration.ipynb
+++ b/final_exploration.ipynb
@@ -3199,8 +3199,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "09db0107",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>optype</th>\n",
+       "      <th>approach</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Biliary/Pancreas</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>234</td>\n",
+       "      <td>471.645299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>28</td>\n",
+       "      <td>183.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>207</td>\n",
+       "      <td>135.748792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Breast</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>200</td>\n",
+       "      <td>77.445000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Colorectal</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>552</td>\n",
+       "      <td>195.248188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1783.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>254</td>\n",
+       "      <td>162.913386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Hepatic</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>161</td>\n",
+       "      <td>738.043478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>90</td>\n",
+       "      <td>312.688889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Major resection</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>61</td>\n",
+       "      <td>430.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>96</td>\n",
+       "      <td>358.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>310</td>\n",
+       "      <td>184.548387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Minor resection</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>16</td>\n",
+       "      <td>328.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>248</td>\n",
+       "      <td>121.447581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Others</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>381</td>\n",
+       "      <td>772.422572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>28</td>\n",
+       "      <td>293.392857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>78</td>\n",
+       "      <td>188.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Stomach</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>114</td>\n",
+       "      <td>288.684211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>25</td>\n",
+       "      <td>180.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>321</td>\n",
+       "      <td>164.956386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Thyroid</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>95</td>\n",
+       "      <td>66.421053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Robotic</th>\n",
+       "      <td>24</td>\n",
+       "      <td>152.916667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>6</td>\n",
+       "      <td>88.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Transplantation</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>220</td>\n",
+       "      <td>1426.545455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Videoscopic</th>\n",
+       "      <td>113</td>\n",
+       "      <td>304.070796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vascular</th>\n",
+       "      <th>Open</th>\n",
+       "      <td>121</td>\n",
+       "      <td>561.586777</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              count         mean\n",
+       "optype           approach                       \n",
+       "Biliary/Pancreas Open           234   471.645299\n",
+       "                 Robotic         28   183.571429\n",
+       "                 Videoscopic    207   135.748792\n",
+       "Breast           Open           200    77.445000\n",
+       "Colorectal       Open           552   195.248188\n",
+       "                 Robotic          3  1783.333333\n",
+       "                 Videoscopic    254   162.913386\n",
+       "Hepatic          Open           161   738.043478\n",
+       "                 Videoscopic     90   312.688889\n",
+       "Major resection  Open            61   430.000000\n",
+       "                 Robotic         96   358.750000\n",
+       "                 Videoscopic    310   184.548387\n",
+       "Minor resection  Open            16   328.750000\n",
+       "                 Robotic          1    50.000000\n",
+       "                 Videoscopic    248   121.447581\n",
+       "Others           Open           381   772.422572\n",
+       "                 Robotic         28   293.392857\n",
+       "                 Videoscopic     78   188.589744\n",
+       "Stomach          Open           114   288.684211\n",
+       "                 Robotic         25   180.160000\n",
+       "                 Videoscopic    321   164.956386\n",
+       "Thyroid          Open            95    66.421053\n",
+       "                 Robotic         24   152.916667\n",
+       "                 Videoscopic      6    88.333333\n",
+       "Transplantation  Open           220  1426.545455\n",
+       "                 Videoscopic    113   304.070796\n",
+       "Vascular         Open           121   561.586777"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cases.groupby(['optype', 'approach'])['intraop_ebl'].agg(['count', 'mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50d5deb7",
    "metadata": {},
    "outputs": [],
    "source": []
